detangle the various progress tracker variants, for the greater good but also to enable easier dependency injection